horizontal scroll fix

--- a/mystyle.css
+++ b/mystyle.css
@@ -5,6 +5,7 @@ html{
 html::-webkit-scrollbar{
   display: none;
 }
+body{overflow-x: hidden;}
 
 @media screen and (max-width: 1350px){
   #scrolltotop{
